test/semantic-errors/5.pas
program p;
begin 1 end.
